<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello Dart Night!</string>
    <string name="app_name">Dart Night</string>
    
    <!-- Title string for Login activity-->
    <string
        name="ui_activity_title">Sign-in</string>
    <!-- Message shown in progress dialog while app connects to the server -->
    <string
        name="ui_activity_authenticating">Authenticating\u2026</string>
    
    <!-- AuthenticatorActivity -->
    <skip />
     <string
        name="firstname_label">First Name</string>
     <string
        name="lastname_label">Last Name</string>
     <string
        name="email_label">Email</string>
    <!-- Label above username EditText -->
    <string
        name="login_username_label">Username</string>
    <!-- Label above password EditText -->
    <string
        name="login_password_label">Password</string>
    <!-- Button to sign in after entering username and password -->
    <string
        name="login_ok_button">Sign in</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string
        name="login_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter account is
        required. Please try again. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string
        name="login_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string
        name="login_loginfail_text_pwmissing">Type the password for this account.</string>
    <!--
        Message shown if the provided account doesn't support the current
        activity.
    -->
    <string
        name="login_newaccount_text">Sign in to your Sample SyncAdapter account. </string>

    <!-- Button that takes the user to the "sign in" screen -->
    <string
        name="sign_in_button_label">Sign in</string>
    <!-- Button for going to the previous screen or step -->
    <string
        name="back_button_label">Back</string>
    <string name="register_user">New User</string>
    <string name="existing_user">Existing User</string>
    
    <!-- Menus/Action Bar -->
    <string name="menu_new_game">New game</string>
    <string name="menu_add_team">Add Team</string>
    <string name="menu_new_team">Create New Team</string>
    <string name="menu_select_team">Select Team</string>
    
    <!-- Nav Spinner -->
    <string name="nav_item_games">Games</string>
    <string name="nav_item_players">Players</string>
    <string name="nav_item_leaders">Leaders</string>
    <string name="nav_item_leagues">Leagues</string>
    
    <string name="menu_switch_league">Change League</string>
    <string name="menu_logout">Sign Out</string>
     
</resources>
