<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2010, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="5dip" >

            <RadioGroup
                android:id="@+id/login_select"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_user"
                    android:onClick="onLoginTypeSelected" />

                <RadioButton
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:text="@string/existing_user"
                    android:onClick="onLoginTypeSelected" />
            </RadioGroup>

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_select"
                android:layout_marginBottom="5dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/firstname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/message"
                android:text="@string/firstname_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstname_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/message"
                android:layout_toRightOf="@id/firstname_label"
                android:autoText="false"
                android:capitalize="none"
                android:inputType="textPersonName"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true" />

                       
             <EditText
                android:id="@+id/lastname_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/firstname_edit"
                android:layout_toRightOf="@id/firstname_label"
                android:autoText="false"
                android:capitalize="none"
                android:inputType="textPersonName"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true" />
             
             <TextView
                android:id="@+id/lastname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/lastname_edit"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/firstname_label"
                android:text="@string/lastname_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />           

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/lastname_edit"
                android:layout_toRightOf="@id/firstname_label"
                android:autoText="false"
                android:capitalize="none"
                android:inputType="textEmailAddress"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true" />
             
            
            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/email_edit"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lastname_label"
                android:text="@string/email_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            
            <EditText
                android:id="@+id/username_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/email_edit"
                android:layout_toRightOf="@id/firstname_label"
                android:autoText="false"
                android:capitalize="none"
                android:inputType="textEmailAddress"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:singleLine="true" />
            
            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/username_edit"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/email_label"
                android:text="@string/login_username_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/username_edit"
                android:layout_toRightOf="@id/firstname_label"
                android:autoText="false"
                android:capitalize="none"
                android:inputType="textPassword"
                android:minWidth="250dip"
                android:password="true"
                android:scrollHorizontally="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/password_edit"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/username_label"
                android:layout_marginTop="2dip"
                android:singleLine="true"
                android:text="@string/login_password_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            

            <TextView
                android:id="@+id/message_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_label"
                android:layout_marginBottom="5dip"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c6c3c6"
        android:minHeight="54dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="4dip" >

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="100dip"
            android:onClick="handleLogin"
            android:text="@string/login_ok_button" />
    </FrameLayout>

</LinearLayout>